--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <header>
             <h1>Stacks Token Whitelist Checker</h1>
-            <p>Enter a Stacks token contract address below to check if it is on the official whitelist</p>
+            <p class="description">Enter a Stacks token contract address below to check if it is on the official whitelist.</p>
         </header>
 
         <main>
