--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <header>
             <h1>Stacks Token Whitelist Checker</h1>
-            <p class="description">Enter a Stacks token contract address to verify its status on the official whitelist and avoid potential risks.</p>
+            <p class="description">Enter a Stacks token address to check its whitelist status and avoid risks.</p>
         </header>
 
         <main>
