--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </main>
 
         <footer class="footer">
-            <p>© 2025 STX Balance by flor.btc | All rights reserved.</p>
+            <p>© 2025 STX Token Whitelist Checker by flor.btc | All rights reserved.</p>
         </footer>
     </div>
 
